syntax = "proto3";

package document;

option go_package = "github.com/augale2/websocket-backend/services/document-service/proto;document";

service DocumentService {
    rpc CreateDocument (CreateDocumentRequest) returns (CreateDocumentResponse);
    rpc UpdateDocument (UpdateDocumentRequest) returns (UpdateDocumentResponse);
    rpc GetDocument (GetDocumentRequest) returns (GetDocumentResponse);
}

// Request to create a document
message CreateDocumentRequest {
  string title = 1;
  string content = 2;
}

// Response after creating a document
message CreateDocumentResponse {
  string document_id = 1;
  string message = 2;  // Optional: confirmation message or error info
}

// Request to update a document
message UpdateDocumentRequest {
  string document_id = 1;
  string content = 2;
  string title = 3;
  // You can add fields like user_id, timestamp, or change type if needed
}

// Response after updating a document
message UpdateDocumentResponse {
  string message = 1;
}

// Request to fetch a document
message GetDocumentRequest {
  string document_id = 1;
}

// Response containing the document details
message GetDocumentResponse {
  string document_id = 1;
  string title = 2;
  string content = 3;
}
